--- a/scss/style/_colors.scss
+++ b/scss/style/_colors.scss
@@ -2,6 +2,9 @@
 
 :root {
   color-scheme: light dark;
+  // SYSTEM
+  --main_color: rgba(255,255,255,.9);
+  --main_border: rgba(255,255,255,.2);
   //MATERIAL ICONS
   --icon: rgba(0, 0, 0, 0.54);
   --icon_inactive: rgba(0, 0, 0, 0.26);
