--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,83 @@
 @import "./style/_init.scss";
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Jost", sans-serif;
+    font-family: "Noto Sans", sans-serif;
+}
+
+body,
+html {
+    height: 100vh;
+}
+
 html {
     body {
+        padding: 38px 42px;
+        background-image: url("/images/52545243399_fbc8063594_6k.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        backdrop-filter: blur(40px);
+        -webkit-backdrop-filter: blur(40px);
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.6);
+            z-index: -1;
+        }
         main {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(5, 1fr);
+            grid-column-gap: 20px;
+            grid-row-gap: 20px;
+            height: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+
+            section {
+                color: var(--main_color, rgba(255, 255, 255, 0.9));
+                h1 {
+                    font-weight: 300;
+                    margin-bottom: 0;
+                }
+                span {
+                    font-weight: 100;
+                    font-size: 0.85rem;
+                    display: block;
+                    margin-bottom: 1rem;
+                }
+
+                div.card {
+                    border: 0.5px solid var(--main_border, rgba(255, 255, 255, 0.2));
+                    border-radius: 0.5rem;
+                    padding: 18px 20px;
+                }
+            }
+
+            section.about {
+                grid-area: 1 / 1 / 4 / 2;
+            }
+            section.favorite {
+                grid-area: 1 / 2 / 4 / 3;
+            }
+            section.status {
+                grid-area: 1 / 3 / 4 / 4;
+            }
+            section.catalog {
+                grid-area: 4 / 1 / 6 / 3;
+            }
+            section.calendar {
+                grid-area: 4 / 3 / 6 / 4;
+            }
+
             @import "./partials/about";
             @import "./partials/calendar";
             @import "./partials/catalog";
