--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,13 +15,13 @@ html {
 
 html {
     body {
-        padding: 38px 42px;
+        padding: 3rem 3.8rem;
         background-image: url("/images/52545243399_fbc8063594_6k.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        backdrop-filter: blur(40px);
-        -webkit-backdrop-filter: blur(40px);
+        backdrop-filter: blur(3rem);
+        -webkit-backdrop-filter: blur(3rem);
         &::after {
             content: "";
             position: absolute;
@@ -36,29 +36,53 @@ html {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(5, 1fr);
-            grid-column-gap: 20px;
-            grid-row-gap: 20px;
+            grid-column-gap: 2.8rem;
+            grid-row-gap: 2.8rem;
             height: 100%;
-            max-width: 1200px;
+            max-width: 1280px;
             margin: 0 auto;
 
             section {
                 color: var(--main_color, rgba(255, 255, 255, 0.9));
-                h1 {
-                    font-weight: 300;
-                    margin-bottom: 0;
+
+                a.link_chevron {
+                    display: inline-block;
+                    text-decoration: none;
+                    color: inherit;
+                    position: relative;
+                    padding-right: 2rem;
+
+                    &:after {
+                        content: "chevron_right";
+                        font-family: "Material Symbols Outlined";
+                        position: absolute;
+                        top: -0.4rem;
+                        right: 0;
+                        font-size: 1.8rem;
+                    }
+
+                    h1 {
+                        font-size: 1.2rem;
+                        font-weight: 300;
+                        margin: 0 0 0.2rem;
+                    }
                 }
                 span {
                     font-weight: 100;
                     font-size: 0.85rem;
                     display: block;
-                    margin-bottom: 1rem;
+                }
+
+                h2 {
+                    font-size: 1rem;
+                    font-weight: 300;
                 }
 
                 div.card {
-                    border: 0.5px solid var(--main_border, rgba(255, 255, 255, 0.2));
+                    border: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
                     border-radius: 0.5rem;
-                    padding: 18px 20px;
+                    padding: 1.2rem 1rem;
+                    margin: 1rem 0;
                 }
             }
 
