First draft of about you section

--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,5 +1,127 @@
 //main:../main.scss
 
-section.about{
-    // background: red;
+section.about {
+    div.card {
+        ul {
+            li {
+                list-style: none;
+                border-bottom: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
+                padding: 0 0 1rem;
+                margin-bottom: 1rem;
+
+                &:last-of-type {
+                    border: none;
+                    padding: 0;
+
+                    margin: 0;
+                }
+
+                h2 {
+                    margin-bottom: 0.2rem;
+                }
+                span {
+                    font-size: 0.8rem;
+                }
+
+                a {
+                    display: inline-block;
+                    text-decoration: none;
+                    color: inherit;
+                    font-size: 0.8rem;
+                    font-weight: 300;
+                    position: relative;
+
+                    &.link_arrow {
+                        padding-right: 1rem;
+                        margin-top: 1rem;
+
+                        &:after {
+                            content: "east";
+                            font-family: "Material Symbols Outlined";
+                            position: absolute;
+                            top: .1rem;
+                            right: 0;
+                            font-size: .8rem;
+                        }
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+
+                    &.link_external {
+                        display: block;
+                        text-align: right;
+                        padding-right: 1rem;
+
+                        &:after {
+                            content: "north_east";
+                            font-family: "Material Symbols Outlined";
+                            position: absolute;
+                            top: 0;
+                            right: 0;
+                            font-size: .8rem;
+                        }
+                    }
+                }
+
+                div[apps] {
+                    display: flex;
+                    justify-content: space-between;
+                    flex-wrap: nowrap;
+                    padding: 1rem 0 0;
+                    // gap: 0.8rem;
+
+                    a[data-app] {
+                        padding: 0.6rem 0.6rem 0.6rem 2.6rem;
+                        background-position: left 0.6rem center !important;
+                        background-repeat: no-repeat !important;
+                        background-size: 1.6rem !important;
+                        border: 0.1rem solid transparent;
+
+                        &[data-app="canvas"] {
+                            background: url("/images/canvas.png");
+                        }
+                        &[data-app="office365"] {
+                            background: url("/images/office365.png");
+                        }
+                        &[data-app="myfiu"] {
+                            background: url("/images/fiu.png");
+                        }
+
+                        &:hover {
+                            border: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
+                            border-radius: 0.25rem;
+                        }
+                    }
+                }
+
+                div[stacked_graph] {
+                    display: flex;
+                    flex-wrap: nowrap;
+                    padding: 1rem 0 2rem;
+                    width: 100%;
+
+                    span {
+                        height: 0.2rem;
+                        position: relative;
+                        &::after {
+                            content: attr(data-label);
+                            position: absolute;
+                            top: 0.6rem;
+                        }
+                        &:nth-child(1) {
+                            background: #eb6062;
+                        }
+                        &:nth-child(2) {
+                            background: #ecce21;
+                        }
+                        &:nth-child(3) {
+                            background: #23864d;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
