Font and chevron

--- a/scss/partials/_favorite.scss
+++ b/scss/partials/_favorite.scss
@@ -22,6 +22,8 @@ section.favorite {
             max-width: 100px;
             text-decoration: none;
             color: inherit;
+            font-size: 0.8rem;
+            font-weight: 300;
 
                         &:hover {
                 background-color: grey;
