--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,7 @@ html {
                     border-radius: 0.5rem;
                     padding: 1.2rem 1rem;
                     margin: 1rem 0;
+                    height: 100%;
                 }
             }
 
