Catalog search and filter buttons

--- a/scss/partials/_catalog.scss
+++ b/scss/partials/_catalog.scss
@@ -1,5 +1,127 @@
 //main:../main.scss
 
-section.catalog{
-    // background: red;
+section.catalog {
+    div.card {
+        header {
+            border-bottom: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
+            padding-bottom: 1rem;
+
+
+            form {
+                @include textfield-outlined();
+                padding-bottom: 1rem;
+
+                label {
+                    position: relative;
+
+                    input {
+                        padding: .4rem .6rem .6rem 2.4rem;
+                        background: transparent;
+                        border: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
+                        border-radius: .4rem;
+                        color: inherit;
+                        font-weight: 100;
+                        outline: none;
+                        width: 100%;
+
+                        &::placeholder {
+                            color: var(--main_border, rgba(255, 255, 255, 0.2));
+                        }
+                    }
+
+                    i {
+                        color: var(--main_border, rgba(255, 255, 255, 0.6));
+                        font-weight: 300;
+                        position: absolute;
+                        top: 50%;
+                        left: .4rem;
+                        transform: translate(0, -50%);
+                    }
+                }
+            }
+
+            div[filter] {
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: nowrap;
+                gap: 0.2rem;
+
+                span[data-icon] {
+                    min-width: 60px;
+                    padding: 0.6rem 0.4rem 0.6rem 1.8rem;
+                    background-position: left 0.6rem center !important;
+                    background-repeat: no-repeat !important;
+                    background-size: 1.6rem !important;
+                    border: 0.1rem solid transparent;
+                    position: relative;
+                    cursor: pointer;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+
+                    &::before {
+                        content: attr(data-icon);
+                        font-family: "Material Symbols Outlined";
+                        font-size: 1.4rem;
+                        font-weight: 100;
+                        position: absolute;
+                        left: .2rem;
+                        top: 50%;
+                        transform: translate(0, -50%);
+                        border: 0.1rem solid transparent;
+                    }
+
+                    &:hover {
+                        border: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.2));
+                        border-radius: 0.25rem;
+                    }
+
+                    &[active] {
+                        border: 0.1rem solid var(--main_border, rgba(255, 255, 255, 0.6));
+                        background: var(--main_border, rgba(255, 255, 255, 0.6));
+                        border-radius: 0.25rem;
+
+                    }
+                }
+            }
+
+
+        }
+
+        article {
+            div {
+                &.list {}
+
+                &[filter] {
+                    span {
+                        font-size: .6rem;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    section.catalog {
+        div.card {
+            header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 2rem;
+
+                form {
+                    flex: 1;
+                    padding: 0;
+
+                }
+
+                div[filter] {
+                    gap: 0.8rem;
+                }
+            }
+        }
+    }
 }
