3rd row and placeholder images

--- a/scss/partials/_favorite.scss
+++ b/scss/partials/_favorite.scss
@@ -52,6 +52,15 @@ section.favorite {
             &#askit {
                 background-image: url("../../images/askit.png");
             }
+            &#panthersoft {
+                background-image: url("../../images/Roarybot4.png");
+            }
+            &#onestop {
+                background-image: url("../../images/onestop.png");
+            }
+            &#hr {
+                background-image: url("../../images/hr.png");
+            }
         }
     }
 }
