--- a/scss/style/_colors.scss
+++ b/scss/style/_colors.scss
@@ -5,6 +5,14 @@
   // SYSTEM
   --main_color: rgba(255,255,255,.9);
   --main_border: rgba(255,255,255,.2);
+  //GRAPH COLORS
+  --main_color_red: #eb6062;
+  --main_color_yellow: #ecce21;
+  --main_color_green: #23864d;
+  --main_color_red_lighter: #eb606240;
+  --main_color_yellow_lighter: #ecce2140;
+  --main_color_green_lighter: #23864d40;
+
   //MATERIAL ICONS
   --icon: rgba(0, 0, 0, 0.54);
   --icon_inactive: rgba(0, 0, 0, 0.26);
