Calendar dropdown, styling, and markup
Also made alerts scrollable too

--- a/scss/partials/_status.scss
+++ b/scss/partials/_status.scss
@@ -2,6 +2,7 @@
 
 section.status {
     div.card {
+        overflow-y: scroll;
         display: flex;
         flex-direction: column;
         // background: red;
