--- a/scss/partials/_status.scss
+++ b/scss/partials/_status.scss
@@ -8,7 +8,7 @@ section.status {
         // background: red;
         font-size: 0.8rem;
         font-weight: 300;
-        color: inherit;
+        // color: inherit;
 
         span.outages {
             background: var(--main_color_red_lighter, #eb606240);
