--- a/scss/partials/_catalog.scss
+++ b/scss/partials/_catalog.scss
@@ -92,24 +92,45 @@ section.catalog {
             div {
                 &.list {
                     overflow-y: scroll;
-                    max-height: 300px;
-
-                    span {
-                        margin: 10px 0;
-                        padding: 5px 20px;
-
-                        &:first-of-type {
-                            margin-top: 0;
+                    max-height: 450px;
+                    div{
+                        // padding-top: 40px;
+                        position: relative;
+                        &.hide {
+                            display: none;
                         }
 
-                        &.heading {
-                            padding-left: 10px;
-                            background: var(--main_border, rgba(255, 255, 255, 0.6));
+                        &::before{
+                            content: attr(data-label);
                             position: sticky;
-                            top: 0px;
+                            display: block;
+                            top: 0;
+                            left: 0;
+                            right: 0;
+                            width: 100%;
+                            padding: 5px 20px;
+
+                            padding-left: 10px;
+                            // background: var(--main_border, rgba(255, 255, 255, 0.6));
+                            background: gray;
+                        }
+
+                        span {
+                            margin: 10px 0;
+                            padding: 5px 20px;
+    
+                            &.hide {
+                                display: none;
+                            }
+                            
+                            &:first-of-type {
+                                margin-top: 20px;
+                            }
 
                         }
                     }
+
+
                 }
 
                 &[filter] {
